--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,5 +1,5 @@
 # Required substituion variables:
-# - _GCP_FASTAPI_POETRY_DOMAIN
+# - _GCP_FASTAPI_GH_WEBHOOKS_DOMAIN
 
 
 steps:
@@ -7,10 +7,10 @@ steps:
     entrypoint: "bash"
     args:
       - -c
-      - docker build -t gcr.io/$PROJECT_ID/gcp-fastapi-poetry:${TAG_NAME} -f Dockerfile .
+      - docker build -t gcr.io/$PROJECT_ID/gcp-fastapi-gh-webhooks:${TAG_NAME} -f Dockerfile .
 
   - name: "gcr.io/cloud-builders/docker"
-    args: ["push", "gcr.io/$PROJECT_ID/gcp-fastapi-poetry:${TAG_NAME}"]
+    args: ["push", "gcr.io/$PROJECT_ID/gcp-fastapi-gh-webhooks:${TAG_NAME}"]
 
   # Deploy service image to Cloud Run
   - name: "gcr.io/cloud-builders/gcloud"
@@ -19,14 +19,15 @@ steps:
       - -c
       - >
         gcloud
-        run deploy ${TAG_NAME}-gcp-fastapi-poetry
+        run deploy ${TAG_NAME}-gcp-fastapi-gh-webhooks
         --cpu 1
         --memory 256M
         --max-instances 5
-        --image gcr.io/$PROJECT_ID/gcp-fastapi-poetry:${TAG_NAME}
+        --image gcr.io/$PROJECT_ID/gcp-fastapi-gh-webhooks:${TAG_NAME}
         --region europe-west1
         --platform managed
         --allow-unauthenticated
+        --set-env-vars WEBHOOK_SECRET=$$WEBHOOK_SECRET
 
   # Apply domain mapping. Cheap idempotency by ignoring failures.
   - name: "gcr.io/cloud-builders/gcloud"
@@ -36,7 +37,13 @@ steps:
       - >
         gcloud
         beta run domain-mappings create
-        --service ${TAG_NAME}-gcp-fastapi-poetry
-        --domain ${TAG_NAME}.${_GCP_FASTAPI_POETRY_DOMAIN}
+        --service ${TAG_NAME}-gcp-fastapi-gh-webhooks
+        --domain ${TAG_NAME}.${_GCP_FASTAPI_GH_WEBHOOKS_DOMAIN}
         --region europe-west1
         || true
+
+
+availableSecrets:
+  secretManager:
+    - versionName: projects/$PROJECT_ID/secrets/WEBHOOK_SECRET/versions/latest
+      env: "WEBHOOK_SECRET"
