--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "gcp-fastapi-poetry"
+name = "gcp-fastapi-gh-webhooks"
 version = "0.1.0"
 description = ""
 authors = []
@@ -7,8 +7,8 @@ authors = []
 [tool.poetry.dependencies]
 python = "^3.9"
 fastapi = "^0.71.0"
-fastapi-camelcase = "^1.0.5"
 uvicorn = "^0.16.0"
+pydantic = "^1.9.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
@@ -41,17 +41,17 @@ test.sequence = ["unit", "integration"]
 
 [tool.poe.tasks.unit]
 sequence = [
-    {cmd = "pytest -vv --cov-report xml --cov-report term --cov=gcp_fastapi_poetry tests/unit"},
+    {cmd = "pytest -vv --cov-report xml --cov-report term --cov=gcp_fastapi_gh_webhooks tests/unit"},
 ]
 
 [tool.poe.tasks.integration]
 sequence = [
-    {shell = "pytest -vv --cov-append --cov-report xml --cov-report term --cov=gcp_fastapi_poetry tests/integration"},
+    {shell = "pytest -vv --cov-append --cov-report xml --cov-report term --cov=gcp_fastapi_gh_webhooks tests/integration"},
 ]
 
 [tool.poe.tasks.local-server]
 sequence = [
-    {shell = "uvicorn gcp_fastapi_poetry.api:app --reload --port 8011"},
+    {shell = "uvicorn gcp_fastapi_gh_webhooks.api:app --reload --port 8011"},
 ]
 
 [build-system]
